--- a/paper/revision2.tex
+++ b/paper/revision2.tex
@@ -32,13 +32,9 @@
 \maketitle
 
 Let us first sincerely thank the reviewers for their relevant and in-depth
-remarks. Their comments helped us to clarify the focus of this work, which
-lead to restructure the evaluation procedure to some extent. As part of these
-modifications, we changed the title to: "Online Tuning of EASY-Backfilling
-using Queue Reordering Policies". It better reflects the main goal, which is
-not to advocate bandit strategies, but rather to study their feasibility, and
-to show where the tradeoff is compared to using simulations for tuning the
-algorithms. We hope this revised version may now be considered for publication. 
+remarks once again. Their comments helped us further the discussion of the
+results, and find a typographical error that passed our scrutiny.
+
 We detail our answers to rewiewer's comments (bold).
 
 \section{Reviewer 1}
@@ -53,6 +49,7 @@ admit that both have been suggested before.
 \textbf{Last paragraph of 1.2 is the third repetition of this.  It is redundant, despite the fact that some reviewer didn't get
 it.
 }
+
 You are right. We rephrased this in a more neutral way.
 
 \textbf{In sect 5.1 you explain that you set lambda=1 because due to the resampling the distributions are stationary.  That is
@@ -61,18 +58,22 @@ stationary, and therefore there is more to gain from switching between policies.
 Also, instead of starting the simulation of each period from an empty system, why not start from the situation at the
 end of the previous period?
 }
-Regarding your first point, good remark, we based this experimental design around previous results
-from "Tuning Backfilling Queues"(JSSPP17) that show some degree of stationarity. We indeed
-expect that non-stationary policy adaptation may allow more improvements (while
-being harder to achieve). We made this clearer in the text.
 
-Your second point is also relevant, yes that should perhaps slightly improve the results.
+Regarding your first point, good remark, we based this experimental design
+around previous results from "Tuning Backfilling Queues"(JSSPP17) that show
+some degree of stationarity using a train/test procedure. We made this clearer
+in the text.
+We indeed expect that non-stationary policy adaptation may allow more
+improvements (while simultaneously being harder to achieve).
+
+Your second point is also relevant, yes that should improve the results.
 But we can see that the 'full feedback' simulated policy here is almost as good as the best
 policy in the set, so we did not worry about this. In a non-stationary case, it may indeed
 be necessary to properly take care of this.
 
 \textbf{Typo at end of 6.1.3: sentence with [24] appears twice.
 }
+
 Right, we fixed this.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -90,10 +91,11 @@ results is not surprising considering previous results some of which are referen
 noted that the authors do not suggest a specific new scheduling algorithm and show that this algorithm results in
 significant improvements over existing methods.
 }
+
 We regret that the detailed answer of the previous rebuttal did not convince you. We disagree with this statement. We indeed
 provide a new scheduling algorithm, which adapts to the situation by selecting the correct reordering policy. This algorithm
 results in significant improvements over existing methods.
-Thank you for your in-depth remarks once again. We integrated these into the minor revision.
+We thank you for your in-depth remarks once again. We integrated these comments into the minor revision.
 
 \textbf{The authors mention "reducing uncertainty" in Section 1.1. It is not clear why this reduction is relevant within the
 manuscript (except as a justification for adding noise?)
@@ -185,30 +187,51 @@ may be preferable because they are less complicated and run with smaller schedul
 the discussion to compare LQF and the online tuning strategies.
 }
 
-First of all, we corrected a crucial typographical error in the text. The S and
+Right, this discussion is warranted. We added paragraph X.
+
+First of all, we corrected a crucial typographical error in the text that slipped
+our scrutiny at the time of running the build chain for the publication. The S and
 L were inverted in both Table 3 and Figure 4. This resolves a blatant
 consistency issue with other publications, most crucially "Tuning Backfilling
 Queues"(JSSPP17).
 
-Indeed, the SQF policy works quite well on the traces considered here on average, and
-under this resampling scheme. The variability however, is high, and it is not the best
-on other traces.
-It would indeed be interesting to have an experimental evaluation of exactly how much
-one gains on average by choosing the bandit over a leave-one-trace-out majority vote policy
-choice.
+Indeed, the SQF policy works quite well on the traces considered here on
+average, and under this resampling scheme. The variability however, is high,
+and it is not the best on other traces.  It would indeed be interesting to have
+an experimental evaluation of exactly how much one gains on average by choosing
+the bandit over a leave-one-trace-out majority vote policy choice.
 
-However, a good estimation of this quantity requires using more traces, and perhaps factoring
-in the topology model of the machines, which should increase the heterogeneity between platforms
-and therefore increase the dependence of the simulation performance on the trace/platform.
-Such a study would be much more tedious.
-Here, we prove the feasibility of the approach. The need for adaptivity is actually understated
-by our simulation approach.
+However, a good estimation of this quantity requires using more traces, and
+perhaps factoring in the topology model of the machines, which should increase
+the heterogeneity between platforms and therefore increase the dependence of
+the simulation performance on the trace/platform. Such a study would be much
+more tedious. Here, we prove the feasibility of the approach. The need for
+adaptivity is actually understated by our simulation approach, but in all
+honesty we don't believe to be able to measure this rigorously.
 
 \textbf{The authors conclude that simulation-based strategy is best but the bandit-based strategy is easier to use and cheaper
 to run. How easy and how cheaper can we run the bandit-based strategy? The authors should add the quantitative
 discussion how the bandit-based strategy is easy to use and saves cost (or scheduling overhead) compared with the
 simulation-based strategies.
 }
+
+Right, we need to make this clearer. We added this discussion to paragraph X.
+
+In both these cases, the scheduling decisions do not have an overhead, as the
+policy is fixed during the period (one day, or week).
+
+The bandit strategy has a negligible computational overhead at period end. Its two
+computational operations are maintaining a sequential average and generating a
+pseudo-random number.
+
+The simulation-based strategy requires to simulate the system K times every
+period end, where K is the number of alternative policies considered (here,
+K=12). Using our simulator, This takes a few seconds. Using a more precise
+simulator with topological modeling, one can argue that the overhead is still
+manageable since these simulations can be easily done in parallel. The most
+important constraint is that these simulations should not take too much time
+compared to the period size, as to not delay the policy switch decision too
+much.
 
 \bibliographystyle{abbrv}
 \bibliography{bibliography}
