revision2 first draft.

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -749,11 +749,6 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
   organization={IEEE}
 }
 
-@book{ocst,
-  author = {Valentin Reis},
-  title = {The Ocaml Easy-Backfilling Simulator},
-  url = {http://github.com/freuk/ocst}
-}
 
 @inproceedings{jsspp17,
   TITLE = "Tuning {EASY}-Backfilling Queues",
@@ -780,11 +775,20 @@ http://www.cs.huji.ac.il/labs/parallel/workload/\ logs.html#clean
   publisher={IEEE}
 }
 
-@book{repro,
+@Misc{repro,
+  title = {Replication Workflow},
+  howpublished = {\url{http://github.com/freuk/obps}},
   author = {Valentin Reis},
-  title = {Replication workflow},
-  url = {http://github.com/obps/obps}
+  year = 2017
 }
+
+@Misc{ocst,
+  author = {Valentin Reis},
+  title = {The Ocaml Easy-Backfilling Simulator},
+  howpublished = {\url{http://github.com/freuk/ocst}},
+  year=2017
+}
+
 
 @inproceedings{srinivasan2002selective,
   title={Selective reservation strategies for backfill job scheduling},
